[package]
name = "vimltui"
version = "0.1.7"
edition = "2024"
authors = ["Juan Diego Rincon Franco"]
license = "MIT"
description = "A self-contained, embeddable Vim editor for Ratatui TUI applications"
repository = "https://github.com/Di3go0-0/vimltui"
homepage = "https://github.com/Di3go0-0/vimltui"
documentation = "https://docs.rs/vimltui"
readme = "README.md"
keywords = ["vim", "tui", "ratatui", "editor", "terminal"]
categories = ["command-line-interface", "text-editors"]
rust-version = "1.85"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"
regex = "1"
